fix: fix icons alignment

--- a/packages/oui-header-tabs/header-tabs.less
+++ b/packages/oui-header-tabs/header-tabs.less
@@ -131,8 +131,10 @@
     font-size: @oui-header-tabs-slider-nav-font-size;
     position: absolute;
     top: 0;
+    height: auto;
     width: @oui-header-tabs-slider-nav-width;
     z-index: 1;
+    cursor: pointer;
 
     &_left {
       left: 0;
