--- a/packages/oui-icons/_variables.less
+++ b/packages/oui-icons/_variables.less
@@ -1,7 +1,7 @@
 // Icon position
 @oui-icon-spacing: 0;
 @oui-icon-vertical-align: middle;
-@oui-icon-alignment-offset: -0.1em;
+@oui-icon-alignment-offset: 0;
 
 // Icon size and color
 @oui-icon-size: rem-calc(24);
