--- a/packages/ovhcloud-light-theme/components/_page-header.less
+++ b/packages/ovhcloud-light-theme/components/_page-header.less
@@ -38,4 +38,13 @@
   :not(.oui-header-tabs__dropdown-container) > .oui-header-tabs__item_active > a {
     border-color: @primary-color;
   }
+
+  .oui-header-tabs__slider {
+    background: #fff;
+
+    &:hover,
+    &:focus {
+      background-color: rgb(239, 249, 253);
+    }
+  }
 }
